# HLAnalysis

./: .env.local.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.octomux/: team.yaml
.octomux/agents/: desk-lead.md  researcher.md  risk-ops.md
config/: deploy.yaml  pm_liquidity_profile.json  run.v31_pm_nba.json  strategy.yaml  symbols.yaml  tuning.btc_multistrike.yaml  tuning.dwell.yaml  tuning.eth_multistrike.yaml  tuning.eth_updown.yaml  tuning.v1-buckets.yaml  tuning.v1-cap995-sl.yaml  tuning.v1-cap995.yaml  tuning.v1-cfg-retune.yaml  tuning.v1-drift-d.yaml  tuning.v1-drift.yaml  tuning.v1-exit-bid.yaml  tuning.v1-final.yaml  tuning.v1-kalshi-buckets.yaml  tuning.v1-park.yaml  tuning.v1-pm-fee-sweep.yaml  tuning.v1-sig5m-lb.yaml  tuning.v1-sig5m-thr.yaml  tuning.v1-sizing.yaml  tuning.v1-thr-max.yaml  tuning.v3-1-final-pm.yaml  tuning.v3-1-prod-pm-fee.yaml  tuning.v3-walkforward.yaml  tuning.v4-walkforward.yaml  tuning.yaml  v1-final.json  v31_pm.json
config/backtest/: v1_hl_bucket_dt60.json  v1_hl_bucket_live.json  v1_hl_bucket_novol.json  v1_hl_bucket_since0531.json  v31_hl_bucket_live.json  v31_pm_wti_hl_tuned.json  v31_pm_wti_pm_tuned.json
data/nba_wp/: wp_logistic.joblib
deploy/: QUICKSTART.md  README.md  com.hlanalysis.recorder.plist
deploy/cdk/: cdk.json  go.mod  main.go  stack.go
deploy/systemd/: hl-daily-report.service  hl-daily-report.timer  hl-engine-s3-sync.service  hl-engine-s3-sync.timer
docs/: analysis-plan.md  architecture.html  code-review.html  mm-strategy-explainer.md  v31-polymarket-live-implementation-plan.md  v31-polymarket-live-plan.md
docs/architecture/: README.md  backtest.md  engine.md  overview.md  recorder-data.md  research.md  shared-spine.md  strategy.md
docs/reports/: 00-overview.md  01-data-quality.ipynb  02-cross-venue-basis.ipynb  03-microstructure.ipynb  04-trade-flow-leadlag.ipynb  05-hip4-binaries.ipynb  06-hip4-pricing-from-perp.ipynb  07-binary-late-yes-strategy.ipynb  08-hip4-markouts.ipynb  09-hip4-perp-leadlag.ipynb  11-hip4-settlement-eventstudy.ipynb  12-strategy-comparison-v3-v4-v5.md
docs/research/: 2026-05-19-v1-v31-edge-and-hl-tuning.md  2026-05-20-backtest-perf.md  2026-05-21-v3.1-mid-hold-distance-exit.md  2026-05-23-v31-final-state.md  2026-05-27-pm-wti-v31-backtest.md  2026-06-05-backtest-perf-v2.md  2026-06-07-pm-multistrike-live-enablement-design.md  2026-06-08-v1-bucket-live-vs-sim.md  2026-06-09-hl-0608-live-vs-sim-both-strategies.md  2026-06-10-hl-all-days-live-vs-sim-shr98.md  2026-06-10-hl-live-fills-v1-v31-window.csv  2026-06-11-hl-clip-cap-calibration-shr105.md  2026-06-11-hl-market-clips-ex-own-summary.csv  2026-06-11-hl-own-fills-displayed-vs-filled.csv  2026-06-11-hl-own-fills-displayed-vs-filled.md  2026-06-11-ioc-refire-floor-hl-fill-model.md  2026-06-11-sim-fill-tape-validation-shr106.md  2026-06-12-hl-bucket-retune-exit-spread-hold.md  2026-06-12-hl-v31-binary-estimator-sweep.md  2026-06-15-hl-entry-spread-gate-shr102-ab.md  2026-06-17-hl-bucket-buy-and-hold-sweep.md  2026-06-18-hl-buy-and-hold-tail-stress.md  2026-06-22-v31-hl-binary-tune.md  2026-06-22-v31-hl-hype-binary-tune.md  2026-06-22-v31-hl-safetyd-band.md  2026-06-24-v1-hl-tiered-tune.md  SPEC-hl-outcome-desk-analysis.md  _smoke_report.html  alternative_momentum_mr_indicators.md  btc_ref_klines_vs_recorded_2026_06_06.md  engine_cadence_port_2026_05_29.md  hl-exit-safety-d-dwell-2026-06-29.md  hl-outcome-desk-2026-06-13.html  hl-outcome-desk-progress.html  pm-nba-winner-backtest.md  pm-wti-up-down-backtest.md  pm_recorded_book_fills_2026-05-31.md  v31-backtest-speedup-2026-06-14.html  v36_ouz_sdr_jr_2026_05_28.md  (+2 more)
experiments/: README.md
hlanalysis/: _fastjson.py  config.py  events.py
scripts/: analyze_exit_safety_d_sweep.py  analyze_nba_fills.py  analyze_sweep.py  best_params.py  calibrate_pm_liquidity.py  capture_hl_hip4_fixture.py  capture_pm_ws_fixture.py  cleanup-ebs.sh  close_probe.py  compact-data.sh  debug_plot.py  deploy.sh  engine_events.py  equity_curve.py  fetch-engine-secrets.sh  fetch_binance_1s_klines.py  fetch_pm_with_doh.py  fetch_pm_wti_klines.py  hip4_probe.py  inspect_engine_state.py  install-engine-sync-systemd.sh  install-engine-systemd.sh  live_order_test.py  merge_slot_dbs.py  plot_bucket_trace.py  plot_market_btc_pm.py  pm_close_position_smoke.py  pm_derive_api_key.py  pm_single_order_smoke.py  pull-data  pull-data.sh  pull-engine.sh  pull_binance_perp_klines.py  push-engine-secrets.sh  research_clean_flb.py  run.sh  run_btc_ref_equivalence.py  run_exit_safety_d_sweep.sh  run_v1_cadence_hl.py  run_v1_cadence_hl_control_dt60.py  (+21 more)
summeries/: 2026-05-18-hl-hip4-v1-v3.1-comparison.html  2026-05-18-strategy-comparison-v3-v4-v5.html  2026-05-18-v3-trade-analysis.html  2026-05-19-v1-v31-edge-and-hl-tuning.md  2026-05-20-backtest-perf.md  2026-05-21-mid-hold-tte-stack.md  2026-05-22-pm-fee-curve.md  2026-05-23-v31-final-state.md  2026-05-31-codebase-review.html  2026-06-01-hl-engine-trade-eval-issues.html  2026-06-05-backtest-perf-v2.md  2026-06-05-backtest-perf-v3.md  2026-06-05-v31-hl-binary-tune.md  codebase-review-2026-05-31.html  engine_bbo_sigma_source_2026_05_31.md  engine_binance_bbo_reference_feed_2026_05_31.md  pm_recorded_book_fills_2026-05-31.md  v1_cadence_validation_2026_05_30.md  v35_momentum_mr_2026_05_28.md  v37_hl_1s_sampling_2026_05_28.md  variable_tte_revalidation_2026_05_31.md
tests/: conftest.py
tools/: _book_dynamics.py  _book_widening_scan.py  _bucket_retune_fullsweep.py  _bucket_retune_sweep.py  _compare_ioc.py  _compare_live_sim.py  _entry_spread_gate_ab.py  _estimator_sweep.py  _live_vs_sim_micro.py  _run_ioc_matrix.sh  backfill_coin_klass.py  backfill_daily_compaction.py  backfill_hl_fill_ledger.py  build_notebooks.py  check_gaps.py  daily_report.py  decision_replay_report.py  dump_hl_fills_all.py  dump_v1_bucket_fills.py  hl_clip_cap_calibration.py  hl_own_fills_displayed_vs_filled.py  recorder_completeness.py  sim_fidelity_report.py  sim_fill_tape_validation.py  sim_markets_from_run.py
(+617 files in other folders)
