[project]
name = "hlanalysis"
version = "0.0.1"
description = "Market-making research and recording infra for Hyperliquid + reference venues"
requires-python = ">=3.12"
dependencies = [
  "websockets>=13.0",
  "aiohttp>=3.10",
  "pyarrow>=18.0",
  "pydantic>=2.9",
  "pyyaml>=6.0",
  "duckdb>=1.1",
  "boto3>=1.35",
  "requests>=2.32",
  "numpy>=2.0",
  "loguru>=0.7",
]

[project.optional-dependencies]
analysis = [
  "jupyter>=1.1",
  "ipykernel>=6.29",
  "nbclient>=0.10",
  "pandas>=2.2",
  "polars>=1.10",
  "matplotlib>=3.9",
  "scipy>=1.14",
  "pytz>=2024.2",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hlanalysis"]

[project.scripts]
hl-recorder = "hlanalysis.recorder.main:main"
hl-replay = "hlanalysis.engine.replay:_cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
