[project]
name = "hlanalysis"
version = "0.0.1"
description = "Market-making research and recording infra for Hyperliquid + reference venues"
requires-python = ">=3.12"
dependencies = [
  "websockets>=13.0",
  "aiohttp>=3.10",
  "pyarrow>=18.0",
  "pydantic>=2.9",
  "pyyaml>=6.0",
  "duckdb>=1.1",
  "boto3>=1.35",
  "requests>=2.32",
  "numpy>=2.0",
  "loguru>=0.7",
  "msgspec>=0.18",
  "hyperliquid-python-sdk>=0.10",
  "sqlmodel>=0.0.22",
  "tenacity>=9.0",
  "scipy>=1.14",
  "hftbacktest>=2.0",
  "numba>=0.65",
  "py-clob-client-v2>=1.0.1",
  "httpx[http2]>=0.27",
  "joblib>=1.4",
  "diskcache>=5.6.3",
  "alembic>=1.18.4",
]

[project.optional-dependencies]
analysis = [
  "jupyter>=1.1",
  "ipykernel>=6.29",
  "nbclient>=0.10",
  "pandas>=2.2",
  "polars>=1.10",
  "matplotlib>=3.9",
  "pytz>=2024.2",
  "plotly>=5.20",
]
# scikit-learn is only used by scripts/train_nba_wp.py (lazy import); keep out of core.
training = [
  "scikit-learn>=1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hlanalysis"]

[project.scripts]
hl-recorder = "hlanalysis.recorder.main:main"
hl-replay = "hlanalysis.engine.replay:_cli"
hl-engine = "hlanalysis.engine.main:main"
hl-bt = "hlanalysis.backtest.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

# Authoritative dev dependencies (merged from both former groups).
# Removes the now-redundant [project.optional-dependencies].dev group.
[dependency-groups]
dev = [
    "dnspython>=2.8.0",
    "mypy>=1.10",
    "nbformat>=5.10.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.5.0",
]

# ---------------------------------------------------------------------------
# Ruff — fast linter + formatter
# Line-length=120 matches the repo's de-facto column width (88 would flag ~390
# lines). Selects: pycodestyle (E), pyflakes (F), isort (I), bugbear (B),
# pyupgrade (UP), simplify (SIM).
# Ignored codes are deferred for the serial autofix pass:
#   E402 — module-import-not-at-top (common for conditional / deferred imports)
#   E741 — ambiguous variable names (noisy in numeric / scientific code)
#   B905 — zip-without-explicit-strict (low risk, high noise)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "E402",  # module-import-not-at-top-of-file — deferred imports are intentional
    "E741",  # ambiguous-variable-name — common in math/stats code (l, O, I)
    "B905",  # zip-without-explicit-strict — low risk, deferred
    # --- Legacy-baseline grandfathering -------------------------------------
    # Pre-existing style nits in code untouched by the linter-adoption change.
    # Genuine-bug rules (F-codes, imports, most B/E) stay enforced; these are
    # subjective refactor suggestions or cosmetic and are deferred to a
    # separate burn-down so the gate is green now without a risky mass-edit.
    "E501",   # line-too-long — 9 pre-existing long lines; not worth rewrapping now
    "SIM102", # collapsible-if — readability is debatable case-by-case
    "SIM103", # needless-bool — minor
    "SIM105", # suppressible-exception (contextlib.suppress) — stylistic
    "SIM108", # if-else-block-instead-of-if-exp — ternary not always clearer
    "UP007",  # non-pep604-annotation-union — cosmetic (Optional vs |)
    "UP042",  # replace-str-enum — StrEnum migration is behaviour-adjacent, defer
    "UP047",  # non-pep695-generic-function — cosmetic
    "B007",   # unused-loop-control-variable — harmless
    "B019",   # cached-instance-method — needs case-by-case review, defer
]

# ---------------------------------------------------------------------------
# Mypy — static type checker
# The codebase has never been type-checked so strict mode would be
# overwhelming. This config is useful but non-blocking (CI runs with
# continue-on-error: true). Incrementally tighten as the codebase improves.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_redundant_casts = true
